Finished the loop with param

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ if(cookie != null && cookie.length > 0)
     editor.setValue(atob(cookie));
 
 var ctx1 = canvas.getContext("2d");
-ctx1.fillStyle="black";
+ctx1.fillStyle="green";
 ctx1.fillRect(0, 0, canvas.width, canvas.height);
 
 
